bug fix, fixed odd layout bug affecting the checkout page causing improper div alignment

--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -8,9 +8,6 @@
     margin: 15px auto;
        
     max-width: 1150px;
-    position: relative;
-    left: 50%;
-    translate: -89%;
 
     .checkout-content {
         width: 80%;
